@@ -583,6 +583,10 @@ SOURCE=.\common\framecmn.cpp
 # End Source File
 # Begin Source File
 
+SOURCE=.\common\fs_filter.cpp
+# End Source File
+# Begin Source File
+
 SOURCE=.\common\fs_inet.cpp
 # End Source File
 # Begin Source File
@@ -2672,6 +2676,10 @@ SOURCE=..\include\wx\fontutil.h
 # Begin Source File
 
 SOURCE=..\include\wx\frame.h
+# End Source File
+# Begin Source File
+
+SOURCE=..\include\wx\fs_filter.h
 # End Source File
 # Begin Source File
 
