@@ -69,6 +69,7 @@ All:
 - Added wxFFile overload to wxFileName::CreateTemporaryFileName().
 - Added wxBackingFile and wxBackedInputStream.
 - Added GetTempDir() to wxFileName and wxStandardPaths.
+- Added wxFilterFSHandler.
 
 All (GUI): 
 
